@@ -26,7 +26,7 @@ group = 'com.github.tomakehurst'
 project.ext {
   versions = [
     handlebars     : '4.3.1',
-    jetty          : '9.4.49.v20220914',
+    jetty          : '11.0.12',
     guava          : '31.1-jre',
     jackson        : '2.14.1',
     xmlUnit        : '2.9.0',
@@ -49,9 +49,9 @@ dependencies {
   api "org.eclipse.jetty.http2:http2-server"
   api "org.eclipse.jetty:jetty-alpn-server"
   api "org.eclipse.jetty:jetty-alpn-java-server"
-  api "org.eclipse.jetty:jetty-alpn-openjdk8-server"
+  api "org.eclipse.jetty:jetty-alpn-server"
   api "org.eclipse.jetty:jetty-alpn-java-client"
-  api "org.eclipse.jetty:jetty-alpn-openjdk8-client"
+  api "org.eclipse.jetty:jetty-alpn-client"
 
   api "com.google.guava:guava:$versions.guava"
   api platform("com.fasterxml.jackson:jackson-bom:$versions.jackson")
@@ -116,9 +116,8 @@ dependencies {
 
   testImplementation "org.eclipse.jetty:jetty-client"
   testImplementation "org.eclipse.jetty.http2:http2-http-client-transport"
-
-  testImplementation "ch.qos.logback:logback-classic:1.3.0"
-
+  testRuntimeOnly "org.slf4j:log4j-over-slf4j:2.0.0"
+  testRuntimeOnly "ch.qos.logback:logback-classic:1.4.0"
   testRuntimeOnly files('src/test/resources/classpath file source/classpathfiles.zip', 'src/test/resources/classpath-filesource.jar')
 
   testImplementation ('net.jockx:littleproxy:1.1.3') {
@@ -203,19 +202,22 @@ allprojects {
 
   version = '3.0.0-beta-1'
 
-  sourceCompatibility = 1.11
-  targetCompatibility = 1.11
+
+  sourceCompatibility = 11
+  targetCompatibility = 11
 
   compileJava {
     options.encoding = 'UTF-8'
 
     // silences warnings about compiling against `sun` packages
     options.compilerArgs += '-XDenableSunApiLintControl'
+    options.compilerArgs += '--add-exports=java.base/sun.security.x509=ALL-UNNAMED'
   }
 
   compileTestJava {
     options.encoding = 'UTF-8'
     options.compilerArgs += '-XDenableSunApiLintControl'
+    options.compilerArgs += '--add-exports=java.base/sun.security.x509=ALL-UNNAMED'
   }
 
   test {
@@ -295,7 +297,7 @@ shadowJar {
   relocate "net.sf", "wiremock.net.sf"
   relocate "com.github.jknack", "wiremock.com.github.jknack"
   relocate "org.antlr", "wiremock.org.antlr"
-  relocate "javax.servlet", "wiremock.javax.servlet"
+  relocate "jakarta.servlet", "wiremock.jakarta.servlet"
   relocate "org.checkerframework", "wiremock.org.checkerframework"
   relocate "org.hamcrest", "wiremock.org.hamcrest"
   relocate "org.slf4j", "wiremock.org.slf4j"
